<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Categorie"
    android:orientation="vertical"
    android:background="@drawable/sfondo_register">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ricerca per: "
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

    <Spinner
        android:id="@+id/spinnerGlass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:entries="@array/glass"/>
    <TextView
        android:id="@+id/bicchiere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bicchiere"
        android:textColor="@color/white"
        android:gravity="end"
        android:textSize="25sp"
        android:textStyle="italic"
        android:layout_marginEnd="30dp"
        android:clickable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Spinner
            android:id="@+id/spinnerCategorie"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:entries="@array/categorie"/>
        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Categoria"
            android:textColor="@color/white"
            android:gravity="end"
            android:textSize="25sp"
            android:textStyle="italic"
            android:layout_marginEnd="30dp"
            android:clickable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Spinner
            android:id="@+id/spinnerTipoAlcol"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:entries="@array/tipo_di_alcolico"/>
        <TextView
            android:id="@+id/tipoAlcol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tipo_di_alcolico"
            android:textColor="@color/white"
            android:gravity="end"
            android:textSize="25sp"
            android:textStyle="italic"
            android:layout_marginEnd="30dp"
            android:clickable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Spinner
            android:id="@+id/spinnerIngrediente"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:entries="@array/ingrediente"/>
        <TextView
            android:id="@+id/ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ingrediente"
            android:textColor="@color/white"
            android:gravity="end"
            android:textSize="25sp"
            android:textStyle="italic"
            android:layout_marginEnd="30dp"
            android:clickable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Spinner
            android:id="@+id/spinnerTipo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:entries="@array/tipo"/>
        <TextView
            android:id="@+id/tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tipo"
            android:textColor="@color/white"
            android:gravity="end"
            android:textSize="25sp"
            android:textStyle="italic"
            android:layout_marginEnd="30dp"
            android:clickable="true"/>
    </LinearLayout>

</LinearLayout>